# SafeHandle

./: CMakeLists.txt  README.md
iface/Safe/: CoInitialize.hpp  CriticalSection.hpp  Event.hpp  File.hpp  FileMapping.hpp  Handle.hpp  Heap.hpp  Mailslot.hpp  Mutex.hpp  Safe.hpp  Semaphore.hpp  Thread.hpp  WaitableTimer.hpp
tests/UnitTests/: CMakeLists.txt  CoInitialize_Tests.cpp  Common.h  CriticalSection_Tests.cpp  Event_Tests.cpp  FileMapping_Tests.cpp  File_Tests.cpp  Heap_Tests.cpp  Mutex_Tests.cpp  Thread_Tests.cpp  WaitableTimer_Tests.cpp
